RESOLVED FIXED274658
[Invalidation] Teardown root should take care of marking ancestors dirty on behalf of its subtree
https://bugs.webkit.org/show_bug.cgi?id=274658
Summary [Invalidation] Teardown root should take care of marking ancestors dirty on b...
alan
Reported 2024-05-24 09:25:58 PDT
ssia
Attachments
Patch (4.58 KB, patch)
2024-05-24 09:43 PDT, alan
no flags
Patch (7.49 KB, patch)
2024-05-25 20:32 PDT, alan
no flags
Patch (7.49 KB, patch)
2024-05-27 16:39 PDT, alan
no flags
[fast-cq]Patch (8.10 KB, patch)
2024-05-27 20:36 PDT, alan
no flags
alan
Comment 1 2024-05-24 09:43:25 PDT
alan
Comment 2 2024-05-25 20:32:50 PDT
alan
Comment 3 2024-05-27 16:39:43 PDT
alan
Comment 4 2024-05-27 20:36:10 PDT
Created attachment 471523 [details] [fast-cq]Patch
EWS
Comment 5 2024-05-28 05:22:38 PDT
Committed 279377@main (93271739610f): <https://commits.webkit.org/279377@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471523 [details].
Note You need to log in before you can comment on or make changes to this bug.