[Invalidation] Teardown root should take care of marking ancestors dirty on behalf of its subtree https://bugs.webkit.org/show_bug.cgi?id=274658

Reviewed by Antti Koivisto.

Instead of calling setNeedsLayoutAndPrefWidthsRecalc on each and every renderer at teardown,
let's just dirty the parent of the destroy root and any renderer that skip the destroy root
as containing block.

* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::resetRendererStateOnDetach):
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::repaintAndMarkContainingBlockDirtyBeforeTearDown):
(WebCore::RenderTreeUpdater::tearDownRenderers):
(WebCore::repaintBeforeTearDown): Deleted.

Canonical link: https://commits.webkit.org/279377@main