Source/WebCore/rendering/updating/RenderTreeUpdater.cpp
@@ -701,11 +701,26 @@ void RenderTreeUpdater::tearDownRenderer(Text& text)
     invalidateRebuildRootIfNeeded(text);
 }
 
-static void repaintBeforeTearDown(const Element& root, auto composedTreeDescendantsIterator)
+static void repaintAndMarkContainingBlockDirtyBeforeTearDown(const Element& root, auto composedTreeDescendantsIterator)
 {
     auto* destroyRootRenderer = root.renderer();
     if (destroyRootRenderer && destroyRootRenderer->renderTreeBeingDestroyed())
         return;
+
+    auto markContainingBlockDirty = [&](auto& renderer) {
+        auto* container = renderer.container();
+        if (!container) {
+            ASSERT_NOT_REACHED();
+            renderer.setNeedsLayout();
+            return;
+        }
+        if (!renderer.isOutOfFlowPositioned()) {
+            container->setChildNeedsLayout();
+            container->setPreferredLogicalWidthsDirty(true);
+            return;
+        }
+        container->setNeedsSimplifiedNormalFlowLayout();
+    };
 
     auto repaint = [&](auto& renderer) {
         if (renderer.isBody()) {
@@ -721,8 +736,10 @@ static void repaintBeforeTearDown(const Element& root, auto composedTreeDescenda
         renderer.repaint(RenderObject::ForceRepaint::Yes);
     };
 
-    if (destroyRootRenderer)
+    if (destroyRootRenderer) {
         repaint(*destroyRootRenderer);
+        markContainingBlockDirty(*destroyRootRenderer);
+    }
 
     for (auto it = composedTreeDescendantsIterator.begin(), end = composedTreeDescendantsIterator.end(); it != end; ++it) {
         auto* element = dynamicDowncast<Element>(*it);
@@ -740,6 +757,10 @@ static void repaintBeforeTearDown(const Element& root, auto composedTreeDescenda
         };
         if (shouldRepaint())
             renderer.repaint();
+        if (renderer.isOutOfFlowPositioned()) {
+            // FIXME: Ideally we would check if containing block is the destory root or a descendent of the destroy root.
+            markContainingBlockDirty(renderer);
+        }
     }
 }
 
@@ -810,12 +831,12 @@ void RenderTreeUpdater::tearDownRenderers(Element& root, TeardownType teardownTy
     push(root);
 
     auto descendants = composedTreeDescendants(root);
-    repaintBeforeTearDown(root, descendants);
+    repaintAndMarkContainingBlockDirtyBeforeTearDown(root, descendants);
     for (auto it = descendants.begin(), end = descendants.end(); it != end; ++it) {
         pop(it.depth());
 
         if (auto* text = dynamicDowncast<Text>(*it)) {
-            tearDownTextRenderer(*text, &root, builder, NeedsRepaint::No);
+            tearDownTextRenderer(*text, &root, builder, NeedsRepaintAndLayout::No);
             continue;
         }
 
@@ -827,13 +848,18 @@ void RenderTreeUpdater::tearDownRenderers(Element& root, TeardownType teardownTy
     tearDownLeftoverPaginationRenderersIfNeeded(root, builder);
 }
 
-void RenderTreeUpdater::tearDownTextRenderer(Text& text, const ContainerNode* root, RenderTreeBuilder& builder, NeedsRepaint needsRepaint)
+void RenderTreeUpdater::tearDownTextRenderer(Text& text, const ContainerNode* root, RenderTreeBuilder& builder, NeedsRepaintAndLayout needsRepaintAndLayout)
 {
     auto* renderer = text.renderer();
     if (!renderer)
         return;
-    if (needsRepaint == NeedsRepaint::Yes)
+    if (needsRepaintAndLayout == NeedsRepaintAndLayout::Yes) {
         renderer->repaint();
+        if (auto* parent = renderer->parent()) {
+            parent->setChildNeedsLayout();
+            parent->setPreferredLogicalWidthsDirty(true);
+        }
+    }
     builder.destroyAndCleanUpAnonymousWrappers(*renderer, root ? root->renderer() : nullptr);
     text.setRenderer(nullptr);
 }
@@ -856,7 +882,7 @@ void RenderTreeUpdater::tearDownLeftoverChildrenOfComposedTree(Element& element,
         if (!child->renderer())
             continue;
         if (auto* text = dynamicDowncast<Text>(*child)) {
-            tearDownTextRenderer(*text, &element, builder, NeedsRepaint::No);
+            tearDownTextRenderer(*text, &element, builder, NeedsRepaintAndLayout::No);
             continue;
         }
         if (auto* element = dynamicDowncast<Element>(*child))
